ftrace: Replace Java 11-only isBlank method with 8
As MANIFEST files still have Bundle-RequiredExecutionEnvironment set to
JavaSE-1.8, which Eclipse assumes upon trying to build the code. There
was a build error [1] before this change.

[1] The method isBlank() is undefined for the type String

Change-Id: Icdf3ff944eea92b095a2a10ddb6e88b735184683
Signed-off-by: Marco Miller <marco.miller@ericsson.com>
Reviewed-on: https://git.eclipse.org/r/c/tracecompass.incubator/org.eclipse.tracecompass.incubator/+/192477
Tested-by: Trace Compass Bot <tracecompass-bot@eclipse.org>
Tested-by: Bernd Hufmann <bernd.hufmann@ericsson.com>
Reviewed-by: Bernd Hufmann <bernd.hufmann@ericsson.com>
Reviewed-by: Matthew Khouzam <matthew.khouzam@ericsson.com>